# knowledge

./: README.md  commit  note
diary/: 清净行_清净力
diary/2020/10/: 12  14  16  20  24  27  28  29  7  week_15_21  week_22_28  week_29_4  week_7_14
diary/2020/11/: 16  21  23  3  30  4  5  week_12_18  week_19_25  week_26_2  week_29_4  week_5_11  双十一购物清单
diary/2020/12/: 11  note  week_10_16  week_17_23  week_24_30  week_3_9
diary/2020/7/: 27  28  29  30  31
diary/2020/8/: 1  10  11  14  15  17  18  19  20  25  26  27  28  29  3  4  5  6  8  month_work  week_work_1
diary/2020/9/: 4  learn_17_23  learn_24_30  month_work  week_17_23  week_24_30
diary/2021/: 清净心
diary/2021/1/: 5  8
diary/2021/2/: 28_3
diary/note/: 关于学习  关于工作  早睡的好处  早起的好处  苦难的真像
diary/note/wife/: 相识三周年写下的诗
hardware/circuit/: source
life/: note  清净因_清净果
life/buddhist/note/: note  为什么凡夫会生妄想.txt  为什么说烦恼既是菩提  快乐是有公式的  生命本身是圆满的_为什么却常感到孤独
life/cooking/: vegetables
life/emotion/: bookshelf  note  人情往来
life/finance/: bookshelf  note  source  投资的艺术
life/growup/: note  未来规划  行业发展趋势
life/medicine/: diabetes  肾
life/wife/: note
software/: bookshelf  source
software/basic_language/: README.md  note
software/computer_basics/: note  source
software/development_basis/: note
software/development_tools/cmake/Code/Introduction_to_Cmake/src/Demo4/: CMakeLists.txt  main.cc
software/development_tools/cmake/Code/Introduction_to_Cmake/src/Demo4/math/: CMakeLists.txt  MathFunctions.cc
software/note/: 技术与业务的平衡
source/: pdf搜索  个人账号  基金投资  学习工具  学习网站  工具网站  搜书  生活网站  经济  论文搜索  设计资源
(+651 files in other folders)
